# Stratego

./: .gitignore  .gitmodules  CMakeLists.txt  QT1.rar  README.md
PRE_GUI/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  game.cpp  main.cpp  piece.cpp  piece.h
PRE_GUI/logic/: board.cpp  game.cpp  game.h  piece.cpp
PRE_GUI/logic2/: board.cpp  board.h  game.cc  game.h  piece.cc  player.cc  player.h  tile.cc
PRE_GUI/src/: main.cpp
PRE_GUI/test/: 0Spy_test.cpp  1Scout_test.cpp  2Miner_test.cpp  CMakeLists.txt  testfunctions.cpp  testfunctions.h
QT1/: .gitignore
QT1/Stratego_gui1/: Board.cpp  Board.h  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  Piece.cpp  Piece.h  Textbox.cpp  Textbox.h  main.cpp  res.qrc  tcpsocket.cpp  tcpsocket.h
QT1/build-Stratego_gui1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT1/build-Stratego_gui1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
QT1/build-Stratego_gui1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Stratego_gui1_autogen/: deps  mocs_compilation.cpp
QT1/build-Stratego_gui1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Stratego_gui1_autogen/EWIEGA46WW/: moc_Button.cpp  moc_Button.cpp.d  moc_Game.cpp  moc_Game.cpp.d  moc_Textbox.cpp  moc_Textbox.cpp.d  moc_tcpsocket.cpp  moc_tcpsocket.cpp.d
QT1_server/: .gitignore
QT1_server/StrategoServer/: CMakeLists.txt  Game.cpp  Game.h  ServerWindow.cpp  ServerWindow.h  button.cpp  button.h  main.cpp  myserver.cpp  myserver.h  player.cpp  player.h  tcpserver.cpp  tcpserver.h
QT1_server/build-StrategoServer-Desktop_Qt_6_6_0_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT1_server/build-StrategoServer-Desktop_Qt_6_6_0_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
QT1_server/build-StrategoServer-Desktop_Qt_6_6_0_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
QT1_server/build-StrategoServer-Desktop_Qt_6_6_0_MinGW_64_bit-Release/StrategoServer_autogen/: deps  mocs_compilation.cpp
QT1_server/build-StrategoServer-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
QT_GUI/: .gitignore
QT_GUI/StrategoClient/: Board.cpp  Board.h  Textbox.h
QT_GUI/StrategoClient/images/: background.xcf  movementrules.xcf
QT_GUI/StrategoServer/: CMakeLists.txt  main.cpp  tcpserver.cpp
StrategoClient/: Button.cpp  Button.h  CMakeLists.txt.user.1c703dd  Game.cpp  Textbox.cpp  tcpsocket.cpp  tcpsocket.h
logic/: board.cpp  board.h  game.cpp  game.h  main.cpp  piece.h
logic2/: tile.h
test/: CMakeLists.txt  Gameover_test.cpp  Scout_test.cpp
(+79 files in other folders)
